js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-function-typeof-import.js
DONOTEVALUATE
(
)
;
function
fn
(
)
{
typeof
import
;
}
